# bugmon-tc

./: .pre-commit-config.yaml  .pylintrc  .taskcluster.yml  .travis.yml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
bugmon_tc/common/: __init__.py  cli.py
bugmon_tc/monitor/: __main__.py  cli.py  monitor.py  tasks.py
bugmon_tc/process/: cli.py  process.py
bugmon_tc/report/: cli.py
src/bugmon_tc/common/: __init__.py  cli.py
src/bugmon_tc/monitor/: cli.py  monitor.py  tasks.py
src/bugmon_tc/process/: cli.py  process.py
src/bugmon_tc/report/: __main__.py  cli.py
tests/: conftest.py  test_common.py  test_monitor.py  test_process.py  test_report.py
tests/common/: test_common.py
tests/monitor/: test_monitor.py  test_monitor_cli.py  test_tasks.py
tests/process/: test_cli.py  test_process.py  test_process_cli.py
tests/report/: test_cli.py  test_report.py  test_report_cli.py
