[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover"
]

[tool.coverage.run]
omit = [
  "*/.egg/*",
  "*/.tox/*",
  "*/build/*",
  "*/dist/*",
  "*/setup.py",
  "*/tests/*"
]

[tool.isort]
force_sort_within_sections = false
known_first_party = "bugmon"
profile = "black"

[tool.mypy]
disallow_subclassing_any = "False"
ignore_missing_imports = "True"
implicit_reexport = "True"
strict = "True"

[tool.poetry]
authors = ["pyoor <pyoor@users.noreply.github.com>"]
description = "Bugmon Taskcluster Implementation"
license = "MPL-2.0"
name = "bugmon-tc"
packages = [{from = "src", include = "bugmon_tc"}]
version = "3.1.3"

[tool.poetry.dependencies]
bugmon = {git = "https://github.com/MozillaSecurity/bugmon.git"}
python = "^3.8.1"
taskcluster = ">=30.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
coverage = {extras = ["toml"], version = "^7.2.3"}
flake8 = "^6.1.0"
flake8-isort = "^6.1.1"
flake8-quotes = "^3.3.1"
freezegun = "^1.2.2"
gitlint = "^0.19.1"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
pylint = "^3.0.2"
pytest = "^7.1.2"
pytest-black = "^0.3.8"
pytest-cov = "^4.1.0"
pytest-flake8 = "^1.1.1"
pytest-mock = "^3.0.0"
pytest-pylint = "^0.21.0"
toml-sort = "^0.23.1"
types-requests = "^2.31.0.10"

[tool.poetry.scripts]
bugmon-monitor = 'bugmon_tc.monitor.cli:main'
bugmon-process = 'bugmon_tc.process.cli:main'
bugmon-report = 'bugmon_tc.report.cli:main'

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
  "duplicate-code",
  "line-too-long",
  "logging-fstring-interpolation",
  "missing-module-docstring",
  "too-many-arguments"
]

[tool.pytest.ini_options]
log_level = "DEBUG"

[tool.semantic_release]
build_command = "pip install poetry && poetry build"
commit_subject = "chore(release): {version} [skip ci]"
upload_to_pypi = false
upload_to_release = false
version_toml = "pyproject.toml:tool.poetry.version"
