[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "bugmon-tc"
version = "5.0.2"
description = "Bugmon Taskcluster Implementation"
readme = "README.md"
license = "MPL-2.0"
authors = [ { email = "pyoor@users.noreply.github.com", name = "pyoor" } ]
requires-python = ">=3.10,<4.0"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "bugmon @ git+https://github.com/MozillaSecurity/bugmon.git",
  "taskcluster>=30",
]
urls.Homepage = "https://github.com/MozillaSecurity/bugmon-tc"
urls.Repository = "https://github.com/MozillaSecurity/bugmon-tc"
scripts = { bugmon-monitor = "bugmon_tc.monitor.cli:main", bugmon-process = "bugmon_tc.process.cli:main", bugmon-report = "bugmon_tc.report.cli:main" }

[dependency-groups]
dev = [
  "black>=25.1",
  "codecov-cli>=11.0.3",
  "coverage[toml]>=7.9.1",
  "flake8>=7.1.2",
  "flake8-isort>=6",
  "flake8-quotes>=3.3.1",
  "freezegun>=1.2.2",
  "gitlint>=0.19.1",
  "mypy>=1.7",
  "pre-commit>=4.2",
  "pylint>=3.0.2",
  "pyproject-fmt>=2",
  "pytest>=8.3.5",
  "pytest-black>=0.6",
  "pytest-cov>=6",
  "pytest-flake8>=1.1.1",
  "pytest-mock>=3",
  "pytest-pylint>=0.21",
  "python-semantic-release>=10.1",
  "types-requests>=2.31.0.10",
]

[tool.hatch]
build.targets.sdist.include = [ "/src", "/tests" ]
build.targets.wheel.packages = [ "src/bugmon_tc" ]
metadata.allow-direct-references = true

[tool.isort]
force_sort_within_sections = false
known_first_party = "bugmon"
profile = "black"

[tool.pylint]
format.max-line-length = 88
messages_control.disable = [
  "duplicate-code",
  "line-too-long",
  "logging-fstring-interpolation",
  "missing-module-docstring",
  "too-many-arguments",
  "too-many-instance-attributes",
  "too-many-positional-arguments"
]

[tool.pytest]
ini_options.log_level = "DEBUG"

[tool.coverage]
run.omit = [ "*/.egg/*", "*/build/*", "*/dist/*", "*/setup.py", "*/tests/*" ]
run.source_pkgs = [ "bugmon_tc" ]
report.exclude_lines = [ "pragma: no cover" ]

[tool.mypy]
disallow_subclassing_any = "False"
ignore_missing_imports = "True"
implicit_reexport = "True"
strict = "True"

[tool.semantic_release]
build_command = "uv build"
commit_message = "chore(release): {version} [skip ci]"
version_toml = [ "pyproject.toml:project.version" ]
